@@ -1,10 +1,7 @@
 @echo off
-set TOPDIR=%~dp0/..
-set VERSION=5.0
-set PMDJAR=%TOPDIR%/lib/pmd-%VERSION%.jar
-set JARPATH=%TOPDIR%/lib/asm-3.2.jar;%TOPDIR%/lib/jaxen-1.1.1.jar;%TOPDIR%/lib/saxon9.jar;%TOPDIR%/lib/js-cvs-12122009.jar
+set TOPDIR=%~dp0..
 set OPTS=
 set MAIN_CLASS=net.sourceforge.pmd.util.viewer.Viewer
 
-java %OPTS% -cp "%PMDJAR%;%JARPATH%;%TOPDIR%/build" %MAIN_CLASS% %*
+java %OPTS% -Djava.ext.dirs="%TOPDIR%/lib" %MAIN_CLASS% %*
 
